--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
+    <input type="text" id="search-field">
+    <button onclick="searchPhone()">Search</button>
 
+    <script src="api.js"></script>
 </body>
 
 </html>
