--- a/index.html
+++ b/index.html
@@ -6,11 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phone Shop</title>
+    <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 <body>
     <input type="text" id="search-field">
     <button onclick="searchPhone()">Search</button>
+
+    <div id="phones" class="row row-cols-1 row-cols-md-3 g-4 w-50 mx-auto">
+
+    </div>
 
     <script src="api.js"></script>
 </body>
