--- a/index.html
+++ b/index.html
@@ -9,15 +9,29 @@
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <input type="text" id="search-field">
-    <button onclick="searchPhone()">Search</button>
-
-    <div id="phones" class="row row-cols-1 row-cols-md-3 g-4 w-50 mx-auto">
+    <div class="mx-4 my-4  d-flex justify-content-center bg-primary text-white">
+        <h1>Phone Shop</h1>
+    </div>
+    <div class="mx-4 my-4  d-flex justify-content-center">
+        <input type="text" id="search-field">
+        <button onclick="searchPhone()" class="bg-primary text-white">Search</button>
 
     </div>
+    <div class="d-flex justify-content-center">
+        <div id="spinner" class="spinner-border"></div>
+    </div>
+
+    <div id="block">
+        <div id="phones" class="row row-cols-1 row-cols-md-3 mx-auto g-8 d-flex justify-content-center">
+
+        </div>
+    </div>
+
+
 
     <script src="api.js"></script>
 </body>
