--- a/index.html
+++ b/index.html
@@ -25,11 +25,19 @@
         <div id="spinner" class="spinner-border"></div>
     </div>
 
+    <div id="phoneId" class="w-50 mx-auto">
+
+    </div>
+
+
     <div id="block">
         <div id="phones" class="row row-cols-1 row-cols-md-3 mx-auto g-8 d-flex justify-content-center">
 
         </div>
+
     </div>
+
+
 
 
 
